2010-01-28  Richard Guenther  <rguenther@suse.de>

PR middle-end/42883
	* tree-cfgcleanup.c (remove_forwarder_block): Do not remove
	the forwarder if the destination is an EH landing pad.

	* g++.dg/torture/pr42883.C: New testcase.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@156322 138bc75d-0d04-0410-961f-82ee72b054a4